--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,12 @@ body {
   --radius-3: 15px;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
+}
+
 a {
   color: inherit;
   text-decoration: none;
